<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/keyPickerDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:rowCount="3">

</GridLayout>